# zprobe

./: .gitignore  README.md
app/: CMakeLists.txt  Kconfig  Kconfig.cdc_acm  Kconfig.cmsis_dap  Kconfig.logging  Kconfig.usb  Kconfig.usb.cdc_acm  Kconfig.usb.cmsis_dap  prj.conf  west.yml
app/boards/arm/nanodap_hs/: Kconfig.board  Kconfig.defconfig  common.dtsi  nanodap_hs_bl.dts  nanodap_hs_bl_defconfig  nanodap_hs_if.dts  nanodap_hs_if_defconfig
app/boards/arm/stm32_bluepill/: Kconfig.board  Kconfig.defconfig  README.md  stm32_bluepill_bl.dts  stm32_bluepill_bl_defconfig  stm32_bluepill_if.dts  stm32_bluepill_if_defconfig
app/boards/arm/stm32f103/: Kconfig.board  Kconfig.defconfig  README.md  board.cmake  common.dtsi  stm32f103_bl.dts  stm32f103_bl_defconfig  stm32f103_if.dts  stm32f103_if_defconfig
app/boards/arm/stm32h730/: Kconfig.board  Kconfig.defconfig  README.md  board.cmake  stm32h730_if.dts  stm32h730_if_defconfig
app/boards/xtensa/esp32s2_devkitc/: Kconfig.board  Kconfig.defconfig  board.cmake  esp32s2_devkitc_if.dts  esp32s2_devkitc_if_defconfig
app/cmake/: ZephyrBuildConfig.cmake
app/cmsis_dap/: CMakeLists.txt  DAP.c  DAP.h  DAP_config.h  Kconfig  README.md
app/drivers/: CMakeLists.txt  Kconfig
app/drivers/include/zprobe/drivers/: swdio.h
app/drivers/swdio/: CMakeLists.txt  Kconfig  Kconfig.bitbang  swdio_bitbang.c
app/drivers/usb/: CMakeLists.txt  Kconfig
app/drivers/usb/device/: CMakeLists.txt  Kconfig  usb_dc_esp32sx.c
app/drivers/zephyr/: module.yml
app/dts/bindings/: vendor-prefixes.txt
app/dts/bindings/usb/: espressif,esp32-usb.yaml
app/dts/bindings/zprobe/: zprobe,board.yaml  zprobe,target.yaml  zprobe,usb-cdc-acm.yaml
app/dts/dt-bindings/zprobe/: hic.h  target.h
app/src/: cmsis_dap.c  main.c  main_bl.c  main_if.c  usb.c  usb_cdc_acm.c  usb_cmsis_dap_v2.c  usb_status.c  usb_status.h
(+1 files in other folders)
